--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@ html {
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
+
 body {
   margin: 0;
   font-family: 'Raleway', sans-serif;
@@ -16,6 +17,7 @@ body {
 }
 
 
-.carousel-inner {
-  height: 500px;
+.carousel-inner .item .center-block {
+    width: 100%;
+    height: 550px;
 }
