--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ body {
     height: 550px;
 }
 
-@media screen and (max-width 840px) }
+@media only screen and (max-width: 840px) {
   height: auto;
   }
 }
