--- a/css/styles.css
+++ b/css/styles.css
@@ -23,19 +23,22 @@ body {
 }
 
 .top-menu {
-  width: 100%
+  width: 100%;
   display: inline-block;
   background-color: #75b843;
+  text-align: center;
 }
 
 .top-menu-items {
-  display: block;
+  display: inline-block;
   width: 100%;
+  max-width: 1200px;
 }
 
 .top-menu ul>li {
   float: left;
-  width: 20px;
+  display: inline-block;
+  text-align: center;
 }
 
 @media only screen and (max-width: 840px) {
