--- a/css/styles.css
+++ b/css/styles.css
@@ -36,8 +36,8 @@ body {
 }
 
 .top-menu ul>li {
-  float: left;
   display: inline-block;
+  padding: 10px 10px 0 10px;
 }
 
 @media only screen and (max-width: 840px) {
