--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@ html {
 body {
   margin: 0;
   font-family: 'Raleway', sans-serif;
+   font-size: 18px; 
 }
 
 
@@ -52,6 +53,12 @@ body {
   width: 100%;
 }
 
+.container-new {
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+}
+
 .container-custom {
   display: inline-block;
   width: 100%;
@@ -63,7 +70,7 @@ body {
 .container-custom2 {
   display: inline-block;
   width: 100%;
-  max-width: 1140px;
+  max-width: 1180px;
   text-align: center;
   padding: 50px 20px;
 }
