--- a/css/styles.css
+++ b/css/styles.css
@@ -116,7 +116,21 @@ body {
         border-top-color: #EEEEEE;
     }
 
+/* Social Icons*/
 
+.social-icons {
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+}
+
+.social-icons ul>li {
+    display: inline-block;
+    padding: 10px;
+    font-size: 24px;
+    font-size: 2.4rem;
+    list-style-type: none;
+}
 
 @media only screen and (max-width: 840px) {
   
