--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,7 @@ body {
   width: 100%;
 }
 
-.container-home {
+.container-home2 {
   background-color: #f2f2f2;
   display: inline-block;
   width: 100%;
