--- a/css/styles.css
+++ b/css/styles.css
@@ -160,12 +160,20 @@ ul.new-list {
 #footer-top {
       background-color: #332f2a;
       padding: 40px 0;
+      color: #fff;
+}
+
+#footer-top a {
+  color: #fff;
 }
 
 #footer-bottom {
      background-color: #201d19;
-    padding: 40px 0;
+     padding: 40px 0;
+     color: #fff;
 }
+
+
 
 @media only screen and (max-width: 840px) {
   
