--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,26 @@ body {
 
 /* Home page ------ */
 
+.container1 {
+  width: 100%;
+  background: url();
+}
+
+.container2 {
+  width: 100%;
+  background: url();
+}
+
+.container3 {
+  width: 100%;
+  background: url();
+}
+
+.container4 {
+  width: 100%;
+  background: url();
+}
+
 
 
 /* Accordian tabs -------- */
