--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,24 @@ body {
 
 /* Home page ------ */
 
+.container-size1
+  width: 100%;
+  max-width: 1180px;
+  margin: 0 auto;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.container-size2 {
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  
+}
+
+
 .container1 {
   width: 100%;
   background: url();
