--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,8 @@ body {
 .container-size1
   width: 100%;
   max-width: 1180px;
+  display: inline-block;
+  text-align: center;
   margin: 0 auto;
   padding-top: 50px;
   padding-bottom: 50px;
@@ -64,6 +66,8 @@ body {
 .container-size2 {
   width: 100%;
   max-width: 1280px;
+  display: inline-block;
+  text-align: center;
   margin: 0 auto;
   padding-top: 50px;
   padding-bottom: 50px;
