--- a/css/styles.css
+++ b/css/styles.css
@@ -53,11 +53,9 @@ body {
 
 /* Home page ------ */
 
-.container-size1
+.container-size1 {
   width: 100%;
   max-width: 1180px;
-  display: inline-block;
-  text-align: center;
   margin: 0 auto;
   padding-top: 50px;
   padding-bottom: 50px;
@@ -66,12 +64,9 @@ body {
 .container-size2 {
   width: 100%;
   max-width: 1280px;
-  display: inline-block;
-  text-align: center;
   margin: 0 auto;
   padding-top: 50px;
-  padding-bottom: 50px;
-  
+  padding-bottom: 50px; 
 }
 
 
