--- a/css/styles.css
+++ b/css/styles.css
@@ -135,12 +135,6 @@ body {
 
 /* Footer --------------------------------- */
 
-.container-footer {
-  display: inline-block;
-  width: 100%;
-  margin-left: -15px;
-  margin-right: -15px;
-}
 
 
 /* Social Icons*/
@@ -151,6 +145,15 @@ body {
     text-align: center;
 }
 
+.social-icons ul {
+  padding-left: 0;
+}
+
+.custom-icon {
+  font-size: 12px;
+  font-size: 1.2rem;
+}
+
 .social-icons ul>li {
     display: inline-block;
     padding: 10px;
@@ -159,12 +162,10 @@ body {
     list-style-type: none;
 }
 
-.map-padding {
-  padding-bottom: 40px;
-}
 
 ul.new-list {
   list-style-type: none;
+  padding-left: 0;
 }
 
 .footer-pic {
