--- a/css/styles.css
+++ b/css/styles.css
@@ -193,7 +193,7 @@ ul.new-list2 {
       background-color: #332f2a;
       padding: 40px 0;
       color: #ccc;
-      font-size: 18rem;
+      font-size: 18px;
       font-size: 1.8rem;
 }
 
