--- a/css/styles.css
+++ b/css/styles.css
@@ -211,7 +211,7 @@ ul.new-list2 {
      background-color: #201d19;
      padding: 25px 0;
      color: #ccc;
-     font-size: 18rem;
+     font-size: 18px;
      font-size: 1.8rem;
 }
 
