--- a/css/styles.css
+++ b/css/styles.css
@@ -65,16 +65,16 @@ body {
   max-width: 1180px;
   text-align: center;
   margin: 0 auto;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .container-size2 {
   width: 100%;
   max-width: 1480px;
   margin: 0 auto;
-  padding-top: 50px;
-  padding-bottom: 50px; 
+  padding-top: 100px;
+  padding-bottom: 100px; 
 }
 
 
@@ -95,7 +95,7 @@ body {
 
 .container4 {
   width: 100%;
-  background: url();
+  background-color: #f2f2f2;
 }
 
 
@@ -219,7 +219,6 @@ ul.new-list2 {
      font-size: 18px;
      font-size: 1.8rem;
 }
-
 
 
 @media only screen and (max-width: 840px) {
