--- a/css/styles.css
+++ b/css/styles.css
@@ -65,37 +65,45 @@ body {
   max-width: 1180px;
   text-align: center;
   margin: 0 auto;
-  padding-top: 100px;
-  padding-bottom: 100px;
 }
 
 .container-size2 {
   width: 100%;
   max-width: 1480px;
   margin: 0 auto;
-  padding-top: 100px;
-  padding-bottom: 100px; 
 }
 
 
 .container1 {
   width: 100%;
   background: url();
+  display: inline-block;
+  padding-top: 100px;
+  padding-bottom: 100px; 
 }
 
 .container2 {
   width: 100%;
   background: url();
+   display: inline-block;
+  padding-top: 100px;
+  padding-bottom: 100px; 
 }
 
 .container3 {
   width: 100%;
   background: url();
+   display: inline-block;
+  padding-top: 100px;
+  padding-bottom: 100px; 
 }
 
 .container4 {
   width: 100%;
   background-color: #f2f2f2;
+   display: inline-block;
+  padding-top: 100px;
+  padding-bottom: 100px; 
 }
 
 
