--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,8 @@ body {
 .top-menu ul>li {
   display: inline-block;
   padding: 10px 10px 0 10px;
+  font-size: 14px;
+  font-size: 1.4rem;
 }
 
 /* Home page ------ */
