--- a/css/styles.css
+++ b/css/styles.css
@@ -177,7 +177,7 @@ i.arrow {
 i.customicon {
   font-size: 18px;
   font-size: 1.8rem;
-  border: 1px solid #ccc;
+  border: 1px solid #9c9c9c;
   padding: 5px;
   width: 50px;
   text-align: center;
