--- a/css/styles.css
+++ b/css/styles.css
@@ -80,34 +80,34 @@ body {
   width: 100%;
   background: url();
   display: inline-block;
-  padding 60px 20px;
+  padding: 60px 20px;
 }
 
 .container2 {
   width: 100%;
   background: url();
    display: inline-block;
-   padding 60px 20px;
+   padding: 60px 20px;
 }
 
 .container3 {
   width: 100%;
   background: url();
    display: inline-block;
-  padding 60px 20px;
+  padding: 60px 20px;
 }
 
 .container4 {
   width: 100%;
   background-color: #f2f2f2;
    display: inline-block;
- padding 60px 20px;
+ padding: 60px 20px;
 }
 
 .container5 {
   width: 100%;
    display: inline-block;
-  padding 60px 20px;
+  padding: 60px 20px;
 }
 
 .col-sm-3,
